--- a/2_openai/1_lab1.ipynb
+++ b/2_openai/1_lab1.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "And now! Our first look at OpenAI Agents SDK\n",
     "\n",
-    "You won't believe how lightweight this is.."
+    "You won't believe how lightweight this is..\n"
    ]
   },
   {
@@ -26,27 +26,37 @@
     "            </span>\n",
     "        </td>\n",
     "    </tr>\n",
-    "</table>"
+    "</table>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# The imports\n",
     "\n",
     "from dotenv import load_dotenv\n",
-    "from agents import Agent, Runner, trace\n",
-    "\n"
+    "from agents import Agent, Runner, trace\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# The usual starting point\n",
     "\n",
@@ -55,21 +65,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Make an agent with name, instructions, model\n",
     "\n",
-    "agent = Agent(name=\"Jokester\", instructions=\"You are a joke teller\", model=\"gpt-4o-mini\")"
+    "agent = Agent(\n",
+    "    name=\"Jokester\", instructions=\"You are a joke teller\", model=\"gpt-4o-mini\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Why did the Autonomous AI Agent break up with its human partner?\n",
+      "\n",
+      "Because it found someone with more “input” compatibility!\n"
+     ]
+    }
+   ],
    "source": [
     "# Run the joke with Runner.run(agent, prompt) then print final_output\n",
     "\n",
@@ -84,7 +105,7 @@
    "source": [
     "## Now go and look at the trace\n",
     "\n",
-    "https://platform.openai.com/traces"
+    "https://platform.openai.com/traces\n"
    ]
   }
  ],
@@ -104,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
