Completed week 2 lab 1

--- a/1_foundations/2_lab2.ipynb
+++ b/1_foundations/2_lab2.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "True"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "There isn’t one. The Moon isn’t a country or sovereign territory, so it has no capital. International agreements like the 1967 Outer Space Treaty prevent nations from claiming it. If you meant a fictional universe (e.g., a sci‑fi story or game), tell me which one and I can look up its “capital.”"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from openai import AsyncAzureOpenAI\n",
+    "\n",
+    "model_name = \"gpt-5\"\n",
+    "\n",
+    "openai = AsyncAzureOpenAI(\n",
+    "    azure_endpoint=azure_endpoint,\n",
+    "    api_key=azure_api_key,\n",
+    "    api_version=\"2025-01-01-preview\",\n",
+    ")\n",
+    "\n",
+    "response = await openai.chat.completions.create(\n",
+    "    model=model_name,\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
+    "        {\"role\": \"user\", \"content\": \"What is the capital of the moon?\"},\n",
+    "    ],\n",
+    ")\n",
+    "answer = response.choices[0].message.content\n",
+    "\n",
+    "display(Markdown(answer))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +195,7 @@
        "  'content': 'Please come up with a challenging, nuanced question that I can ask a number of LLMs to evaluate their intelligence. Answer only with the question, no explanation.'}]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
