--- a/2_openai/3_lab3.ipynb
+++ b/2_openai/3_lab3.ipynb
@@ -12,18 +12,26 @@
     "\n",
     "2. Structured Outputs\n",
     "\n",
-    "3. Guardrails"
+    "3. Guardrails\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
-    "from openai import AsyncOpenAI\n",
-    "from agents import Agent, Runner, trace, function_tool, OpenAIChatCompletionsModel, input_guardrail, GuardrailFunctionOutput\n",
+    "from openai import AsyncOpenAI, AsyncAzureOpenAI\n",
+    "from agents import (\n",
+    "    Agent,\n",
+    "    Runner,\n",
+    "    trace,\n",
+    "    function_tool,\n",
+    "    OpenAIChatCompletionsModel,\n",
+    "    input_guardrail,\n",
+    "    GuardrailFunctionOutput,\n",
+    ")\n",
     "from typing import Dict\n",
     "import sendgrid\n",
     "import os\n",
@@ -33,23 +41,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "load_dotenv(override=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n",
+      "Google API Key exists and begins AI\n",
+      "DeepSeek API Key exists and begins sk-\n",
+      "Groq API Key exists and begins gsk_\n",
+      "Azure API Key exists and begins 9G5s\n"
+     ]
+    }
+   ],
    "source": [
-    "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
-    "google_api_key = os.getenv('GOOGLE_API_KEY')\n",
-    "deepseek_api_key = os.getenv('DEEPSEEK_API_KEY')\n",
-    "groq_api_key = os.getenv('GROQ_API_KEY')\n",
+    "openai_api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "google_api_key = os.getenv(\"GOOGLE_API_KEY\")\n",
+    "deepseek_api_key = os.getenv(\"DEEPSEEK_API_KEY\")\n",
+    "groq_api_key = os.getenv(\"GROQ_API_KEY\")\n",
+    "azure_api_key = os.getenv(\"AZURE_API_KEY\")\n",
     "\n",
     "if openai_api_key:\n",
     "    print(f\"OpenAI API Key exists and begins {openai_api_key[:8]}\")\n",
@@ -69,12 +101,17 @@
     "if groq_api_key:\n",
     "    print(f\"Groq API Key exists and begins {groq_api_key[:4]}\")\n",
     "else:\n",
-    "    print(\"Groq API Key not set (and this is optional)\")"
+    "    print(\"Groq API Key not set (and this is optional)\")\n",
+    "\n",
+    "if azure_api_key:\n",
+    "    print(f\"Azure API Key exists and begins {azure_api_key[:4]}\")\n",
+    "else:\n",
+    "    print(\"Azure API Key not set (and this is optional)\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,50 +132,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### It's easy to use any models with OpenAI compatible endpoints"
+    "### It's easy to use any models with OpenAI compatible endpoints\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "GEMINI_BASE_URL = \"https://generativelanguage.googleapis.com/v1beta/openai/\"\n",
     "DEEPSEEK_BASE_URL = \"https://api.deepseek.com/v1\"\n",
-    "GROQ_BASE_URL = \"https://api.groq.com/openai/v1\""
+    "GROQ_BASE_URL = \"https://api.groq.com/openai/v1\"\n",
+    "AZURE_BASE_URL = os.getenv(\"AZURE_ENDPOINT\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "FROM_EMAIL = Email(\"r.sanjif@gmail.com\")\n",
+    "TO_EMAIL = To(\"r.sanjif@hotmail.com\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "deepseek_client = AsyncOpenAI(base_url=DEEPSEEK_BASE_URL, api_key=deepseek_api_key)\n",
     "gemini_client = AsyncOpenAI(base_url=GEMINI_BASE_URL, api_key=google_api_key)\n",
     "groq_client = AsyncOpenAI(base_url=GROQ_BASE_URL, api_key=groq_api_key)\n",
+    "azure_client = AsyncAzureOpenAI(\n",
+    "    azure_endpoint=AZURE_BASE_URL,\n",
+    "    api_key=azure_api_key,\n",
+    "    api_version=\"2025-01-01-preview\",\n",
+    ")\n",
     "\n",
-    "deepseek_model = OpenAIChatCompletionsModel(model=\"deepseek-chat\", openai_client=deepseek_client)\n",
-    "gemini_model = OpenAIChatCompletionsModel(model=\"gemini-2.0-flash\", openai_client=gemini_client)\n",
-    "llama3_3_model = OpenAIChatCompletionsModel(model=\"llama-3.3-70b-versatile\", openai_client=groq_client)"
+    "deepseek_model = OpenAIChatCompletionsModel(\n",
+    "    model=\"deepseek-chat\", openai_client=deepseek_client\n",
+    ")\n",
+    "gemini_model = OpenAIChatCompletionsModel(\n",
+    "    model=\"gemini-2.0-flash\", openai_client=gemini_client\n",
+    ")\n",
+    "llama3_3_model = OpenAIChatCompletionsModel(\n",
+    "    model=\"llama-3.3-70b-versatile\", openai_client=groq_client\n",
+    ")\n",
+    "azure_model = OpenAIChatCompletionsModel(model=\"gpt-5\", openai_client=azure_client)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sales_agent1 = Agent(name=\"DeepSeek Sales Agent\", instructions=instructions1, model=deepseek_model)\n",
-    "sales_agent2 =  Agent(name=\"Gemini Sales Agent\", instructions=instructions2, model=gemini_model)\n",
-    "sales_agent3  = Agent(name=\"Llama3.3 Sales Agent\",instructions=instructions3,model=llama3_3_model)"
+    "sales_agent1 = Agent(\n",
+    "    name=\"DeepSeek Sales Agent\", instructions=instructions1, model=deepseek_model\n",
+    ")\n",
+    "sales_agent2 = Agent(\n",
+    "    name=\"Gemini Sales Agent\", instructions=instructions2, model=gemini_model\n",
+    ")\n",
+    "sales_agent3 = Agent(\n",
+    "    name=\"Llama3.3 Sales Agent\", instructions=instructions3, model=llama3_3_model\n",
+    ")\n",
+    "sales_agent4 = Agent(\n",
+    "    name=\"Azure Sales Agent\", instructions=instructions1, model=azure_model\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,21 +214,22 @@
     "\n",
     "tool1 = sales_agent1.as_tool(tool_name=\"sales_agent1\", tool_description=description)\n",
     "tool2 = sales_agent2.as_tool(tool_name=\"sales_agent2\", tool_description=description)\n",
-    "tool3 = sales_agent3.as_tool(tool_name=\"sales_agent3\", tool_description=description)"
+    "tool3 = sales_agent3.as_tool(tool_name=\"sales_agent3\", tool_description=description)\n",
+    "tool4 = sales_agent4.as_tool(tool_name=\"sales_agent4\", tool_description=description)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "@function_tool\n",
     "def send_html_email(subject: str, html_body: str) -> Dict[str, str]:\n",
-    "    \"\"\" Send out an email with the given subject and HTML body to all sales prospects \"\"\"\n",
-    "    sg = sendgrid.SendGridAPIClient(api_key=os.environ.get('SENDGRID_API_KEY'))\n",
-    "    from_email = Email(\"ed@edwarddonner.com\")  # Change to your verified sender\n",
-    "    to_email = To(\"ed.donner@gmail.com\")  # Change to your recipient\n",
+    "    \"\"\"Send out an email with the given subject and HTML body to all sales prospects\"\"\"\n",
+    "    sg = sendgrid.SendGridAPIClient(api_key=os.environ.get(\"SENDGRID_API_KEY\"))\n",
+    "    from_email = FROM_EMAIL\n",
+    "    to_email = TO_EMAIL\n",
     "    content = Content(\"text/html\", html_body)\n",
     "    mail = Mail(from_email, to_email, subject, content).get()\n",
     "    sg.client.mail.send.post(request_body=mail)\n",
@@ -169,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,16 +249,28 @@
     "You are given a text email body which might have some markdown \\\n",
     "and you need to convert it to an HTML email body with simple, clear, compelling layout and design.\"\n",
     "\n",
-    "subject_writer = Agent(name=\"Email subject writer\", instructions=subject_instructions, model=\"gpt-4o-mini\")\n",
-    "subject_tool = subject_writer.as_tool(tool_name=\"subject_writer\", tool_description=\"Write a subject for a cold sales email\")\n",
+    "subject_writer = Agent(\n",
+    "    name=\"Email subject writer\", instructions=subject_instructions, model=\"gpt-4o-mini\"\n",
+    ")\n",
+    "subject_tool = subject_writer.as_tool(\n",
+    "    tool_name=\"subject_writer\",\n",
+    "    tool_description=\"Write a subject for a cold sales email\",\n",
+    ")\n",
     "\n",
-    "html_converter = Agent(name=\"HTML email body converter\", instructions=html_instructions, model=\"gpt-4o-mini\")\n",
-    "html_tool = html_converter.as_tool(tool_name=\"html_converter\",tool_description=\"Convert a text email body to an HTML email body\")"
+    "html_converter = Agent(\n",
+    "    name=\"HTML email body converter\",\n",
+    "    instructions=html_instructions,\n",
+    "    model=\"gpt-4o-mini\",\n",
+    ")\n",
+    "html_tool = html_converter.as_tool(\n",
+    "    tool_name=\"html_converter\",\n",
+    "    tool_description=\"Convert a text email body to an HTML email body\",\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,11 +279,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "instructions =\"You are an email formatter and sender. You receive the body of an email to be sent. \\\n",
+    "instructions = \"You are an email formatter and sender. You receive the body of an email to be sent. \\\n",
     "You first use the subject_writer tool to write a subject for the email, then use the html_converter tool to convert the body to HTML. \\\n",
     "Finally, you use the send_html_email tool to send the email with the subject and HTML body.\"\n",
     "\n",
@@ -212,22 +293,23 @@
     "    instructions=instructions,\n",
     "    tools=email_tools,\n",
     "    model=\"gpt-4o-mini\",\n",
-    "    handoff_description=\"Convert an email to HTML and send it\")"
+    "    handoff_description=\"Convert an email to HTML and send it\",\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tools = [tool1, tool2, tool3]\n",
+    "tools = [tool1, tool2, tool3, tool4]\n",
     "handoffs = [emailer_agent]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +317,7 @@
     "You are a Sales Manager at ComplAI. Your goal is to find the single best cold sales email using the sales_agent tools.\n",
     " \n",
     "Follow these steps carefully:\n",
-    "1. Generate Drafts: Use all three sales_agent tools to generate three different email drafts. Do not proceed until all three drafts are ready.\n",
+    "1. Generate Drafts: Use all four sales_agent tools to generate four different email drafts. Do not proceed until all four drafts are ready.\n",
     " \n",
     "2. Evaluate and Select: Review the drafts and choose the single best email using your judgment of which one is most effective.\n",
     "You can use the tools multiple times if you're not satisfied with the results from the first try.\n",
@@ -253,7 +335,8 @@
     "    instructions=sales_manager_instructions,\n",
     "    tools=tools,\n",
     "    handoffs=handoffs,\n",
-    "    model=\"gpt-4o-mini\")\n",
+    "    model=\"gpt-4o-mini\",\n",
+    ")\n",
     "\n",
     "message = \"Send out a cold sales email addressed to Dear CEO from Alice\"\n",
     "\n",
@@ -267,7 +350,7 @@
    "source": [
     "## Check out the trace:\n",
     "\n",
-    "https://platform.openai.com/traces"
+    "https://platform.openai.com/traces\n"
    ]
   },
   {
@@ -280,11 +363,12 @@
     "    is_name_in_message: bool\n",
     "    name: str\n",
     "\n",
-    "guardrail_agent = Agent( \n",
+    "\n",
+    "guardrail_agent = Agent(\n",
     "    name=\"Name check\",\n",
     "    instructions=\"Check if the user is including someone's personal name in what they want you to do.\",\n",
     "    output_type=NameCheckOutput,\n",
-    "    model=\"gpt-4o-mini\"\n",
+    "    model=\"gpt-4o-mini\",\n",
     ")"
    ]
   },
@@ -298,7 +382,10 @@
     "async def guardrail_against_name(ctx, agent, message):\n",
     "    result = await Runner.run(guardrail_agent, message, context=ctx.context)\n",
     "    is_name_in_message = result.final_output.is_name_in_message\n",
-    "    return GuardrailFunctionOutput(output_info={\"found_name\": result.final_output},tripwire_triggered=is_name_in_message)"
+    "    return GuardrailFunctionOutput(\n",
+    "        output_info={\"found_name\": result.final_output},\n",
+    "        tripwire_triggered=is_name_in_message,\n",
+    "    )"
    ]
   },
   {
@@ -313,8 +400,8 @@
     "    tools=tools,\n",
     "    handoffs=[emailer_agent],\n",
     "    model=\"gpt-4o-mini\",\n",
-    "    input_guardrails=[guardrail_against_name]\n",
-    "    )\n",
+    "    input_guardrails=[guardrail_against_name],\n",
+    ")\n",
     "\n",
     "message = \"Send out a cold sales email addressed to Dear CEO from Alice\"\n",
     "\n",
@@ -328,7 +415,7 @@
    "source": [
     "## Check out the trace:\n",
     "\n",
-    "https://platform.openai.com/traces"
+    "https://platform.openai.com/traces\n"
    ]
   },
   {
@@ -337,7 +424,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "message = \"Send out a cold sales email addressed to Dear CEO from Head of Business Development\"\n",
     "\n",
     "with trace(\"Protected Automated SDR\"):\n",
@@ -359,7 +445,7 @@
     "            </span>\n",
     "        </td>\n",
     "    </tr>\n",
-    "</table>"
+    "</table>\n"
    ]
   },
   {
@@ -384,7 +470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
