--- a/2_openai/4_lab4.ipynb
+++ b/2_openai/4_lab4.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Deep Research\n",
     "\n",
-    "One of the classic cross-business Agentic use cases! This is huge."
+    "One of the classic cross-business Agentic use cases! This is huge.\n"
    ]
   },
   {
@@ -24,12 +24,12 @@
     "            </span>\n",
     "        </td>\n",
     "    </tr>\n",
-    "</table>"
+    "</table>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +47,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "load_dotenv(override=True)"
    ]
@@ -70,12 +81,12 @@
     "\n",
     "This is costing me 2.5 cents per call for OpenAI WebSearchTool. That can add up to $2-$3 for the next 2 labs. We'll use free and low cost Search tools with other platforms, so feel free to skip running this if the cost is a concern. Also student Christian W. pointed out that OpenAI can sometimes charge for multiple searches for a single call, so it could sometimes cost more than 2.5 cents per call.\n",
     "\n",
-    "Costs are here: https://platform.openai.com/docs/pricing#web-search"
+    "Costs are here: https://platform.openai.com/docs/pricing#web-search\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,9 +107,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "In 2025, several advanced AI agent frameworks have emerged, enhancing the development and deployment of autonomous systems. Notable among these are:\n",
+       "\n",
+       "- **Agent Lightning**: A flexible framework enabling reinforcement learning-based training of large language models for any AI agent. It decouples agent execution from training, allowing seamless integration with existing agents and supports complex interaction logic. ([arxiv.org](https://arxiv.org/abs/2508.03680?utm_source=openai))\n",
+       "\n",
+       "- **Google Antigravity**: An AI-powered integrated development environment (IDE) designed as an \"agent-first\" platform for software development. It allows developers to delegate complex coding tasks to autonomous AI agents, supporting multiple AI models and providing a standardized agent fine-tuning interface. ([en.wikipedia.org](https://en.wikipedia.org/wiki/Google_Antigravity?utm_source=openai))\n",
+       "\n",
+       "- **Polymorphic Combinatorial Framework (PCF)**: A framework leveraging large language models and mathematical frameworks to guide the design of adaptive AI agents. It enables real-time parameter reconfiguration through mathematically grounded combinatorial spaces, allowing agents to adapt their core behavioral traits dynamically. ([arxiv.org](https://arxiv.org/abs/2508.01581?utm_source=openai))\n",
+       "\n",
+       "- **GoalfyMax**: A protocol-driven multi-agent system for intelligent experience entities. It introduces a standardized Agent-to-Agent communication layer, incorporates a layered memory system for structured knowledge retention, and integrates advanced features supporting robust, real-time strategy adaptation. ([arxiv.org](https://arxiv.org/abs/2507.09497?utm_source=openai))\n",
+       "\n",
+       "- **Cognitive Kernel-Pro**: A fully open-source, multi-module agent framework designed to democratize the development and evaluation of advanced AI agents. It systematically investigates the curation of high-quality training data for Agent Foundation Models and explores novel strategies for agent test-time reflection and voting to enhance agent robustness and performance. ([arxiv.org](https://arxiv.org/abs/2508.00414?utm_source=openai))\n",
+       "\n",
+       "These frameworks represent significant advancements in AI agent development, offering enhanced flexibility, adaptability, and integration capabilities for complex, autonomous systems. "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "message = \"Latest AI Agent frameworks in 2025\"\n",
     "\n",
@@ -114,19 +150,19 @@
    "source": [
     "### As always, take a look at the trace\n",
     "\n",
-    "https://platform.openai.com/traces"
+    "https://platform.openai.com/traces\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We will now use Structured Outputs, and include a description of the fields"
+    "### We will now use Structured Outputs, and include a description of the fields\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,24 +170,31 @@
     "\n",
     "HOW_MANY_SEARCHES = 3\n",
     "\n",
-    "INSTRUCTIONS = f\"You are a helpful research assistant. Given a query, come up with a set of web searches \\\n",
+    "INSTRUCTIONS = (\n",
+    "    f\"You are a helpful research assistant. Given a query, come up with a set of web searches \\\n",
     "to perform to best answer the query. Output {HOW_MANY_SEARCHES} terms to query for.\"\n",
+    ")\n",
     "\n",
     "# Use Pydantic to define the Schema of our response - this is known as \"Structured Outputs\"\n",
     "# With massive thanks to student Wes C. for discovering and fixing a nasty bug with this!\n",
     "\n",
+    "\n",
     "class WebSearchItem(BaseModel):\n",
-    "    reason: str = Field(description=\"Your reasoning for why this search is important to the query.\")\n",
+    "    reason: str = Field(\n",
+    "        description=\"Your reasoning for why this search is important to the query.\"\n",
+    "    )\n",
     "\n",
     "    query: str = Field(description=\"The search term to use for the web search.\")\n",
     "\n",
     "\n",
     "class WebSearchPlan(BaseModel):\n",
-    "    searches: list[WebSearchItem] = Field(description=\"A list of web searches to perform to best answer the query.\")\n",
+    "    searches: list[WebSearchItem] = Field(\n",
+    "        description=\"A list of web searches to perform to best answer the query.\"\n",
+    "    )\n",
     "\n",
     "\n",
     "planner_agent = Agent(\n",
-    "    name=\"PlannerAgent\",\n",
+    "    name=\"Planner Agent\",\n",
     "    instructions=INSTRUCTIONS,\n",
     "    model=\"gpt-4o-mini\",\n",
     "    output_type=WebSearchPlan,\n",
@@ -160,11 +203,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "searches=[WebSearchItem(reason='To find current information on the latest AI agent frameworks launched or trending in 2025.', query='latest AI agent frameworks 2025'), WebSearchItem(reason='To explore key features, comparisons, and reviews of new AI agent frameworks available in 2025.', query='AI agent framework reviews 2025'), WebSearchItem(reason='To identify leading companies and open-source projects related to AI agent frameworks in 2025.', query='top AI agent companies frameworks 2025')]\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
     "message = \"Latest AI Agent frameworks in 2025\"\n",
     "\n",
     "with trace(\"Search\"):\n",
@@ -174,16 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "@function_tool\n",
     "def send_email(subject: str, html_body: str) -> Dict[str, str]:\n",
-    "    \"\"\" Send out an email with the given subject and HTML body \"\"\"\n",
-    "    sg = sendgrid.SendGridAPIClient(api_key=os.environ.get('SENDGRID_API_KEY'))\n",
-    "    from_email = Email(\"ed@edwarddonner.com\") # Change this to your verified email\n",
-    "    to_email = To(\"ed.donner@gmail.com\") # Change this to your email\n",
+    "    \"\"\"Send out an email with the given subject and HTML body\"\"\"\n",
+    "    sg = sendgrid.SendGridAPIClient(api_key=os.environ.get(\"SENDGRID_API_KEY\"))\n",
+    "    from_email = Email(\"r.sanjif@gmail.com\")  # Change this to your verified email\n",
+    "    to_email = To(\"r.sanjif@hotmail.com\")  # Change this to your email\n",
     "    content = Content(\"text/html\", html_body)\n",
     "    mail = Mail(from_email, to_email, subject, content).get()\n",
     "    sg.client.mail.send.post(request_body=mail)\n",
@@ -192,16 +242,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FunctionTool(name='send_email', description='Send out an email with the given subject and HTML body', params_json_schema={'properties': {'subject': {'title': 'Subject', 'type': 'string'}, 'html_body': {'title': 'Html Body', 'type': 'string'}}, 'required': ['subject', 'html_body'], 'title': 'send_email_args', 'type': 'object', 'additionalProperties': False}, on_invoke_tool=<function function_tool.<locals>._create_function_tool.<locals>._on_invoke_tool at 0x786d859d93a0>, strict_json_schema=True, is_enabled=True)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "send_email"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,13 +275,12 @@
     "    instructions=INSTRUCTIONS,\n",
     "    tools=[send_email],\n",
     "    model=\"gpt-4o-mini\",\n",
-    ")\n",
-    "\n"
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,11 +295,15 @@
     "\n",
     "\n",
     "class ReportData(BaseModel):\n",
-    "    short_summary: str = Field(description=\"A short 2-3 sentence summary of the findings.\")\n",
+    "    short_summary: str = Field(\n",
+    "        description=\"A short 2-3 sentence summary of the findings.\"\n",
+    "    )\n",
     "\n",
     "    markdown_report: str = Field(description=\"The final report\")\n",
     "\n",
-    "    follow_up_questions: list[str] = Field(description=\"Suggested topics to research further\")\n",
+    "    follow_up_questions: list[str] = Field(\n",
+    "        description=\"Suggested topics to research further\"\n",
+    "    )\n",
     "\n",
     "\n",
     "writer_agent = Agent(\n",
@@ -254,32 +318,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The next 3 functions will plan and execute the search, using planner_agent and search_agent"
+    "### The next 3 functions will plan and execute the search, using planner_agent and search_agent\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "async def plan_searches(query: str):\n",
-    "    \"\"\" Use the planner_agent to plan which searches to run for the query \"\"\"\n",
+    "    \"\"\"Use the planner_agent to plan which searches to run for the query\"\"\"\n",
     "    print(\"Planning searches...\")\n",
     "    result = await Runner.run(planner_agent, f\"Query: {query}\")\n",
     "    print(f\"Will perform {len(result.final_output.searches)} searches\")\n",
     "    return result.final_output\n",
     "\n",
+    "\n",
     "async def perform_searches(search_plan: WebSearchPlan):\n",
-    "    \"\"\" Call search() for each item in the search plan \"\"\"\n",
+    "    \"\"\"Call search() for each item in the search plan\"\"\"\n",
     "    print(\"Searching...\")\n",
     "    tasks = [asyncio.create_task(search(item)) for item in search_plan.searches]\n",
     "    results = await asyncio.gather(*tasks)\n",
     "    print(\"Finished searching\")\n",
     "    return results\n",
     "\n",
+    "\n",
     "async def search(item: WebSearchItem):\n",
-    "    \"\"\" Use the search agent to run a web search for each item in the search plan \"\"\"\n",
+    "    \"\"\"Use the search agent to run a web search for each item in the search plan\"\"\"\n",
     "    input = f\"Search term: {item.query}\\nReason for searching: {item.reason}\"\n",
     "    result = await Runner.run(search_agent, input)\n",
     "    return result.final_output"
@@ -289,25 +355,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The next 2 functions write a report and email it"
+    "### The next 2 functions write a report and email it\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "async def write_report(query: str, search_results: list[str]):\n",
-    "    \"\"\" Use the writer agent to write a report based on the search results\"\"\"\n",
+    "    \"\"\"Use the writer agent to write a report based on the search results\"\"\"\n",
     "    print(\"Thinking about report...\")\n",
     "    input = f\"Original query: {query}\\nSummarized search results: {search_results}\"\n",
     "    result = await Runner.run(writer_agent, input)\n",
     "    print(\"Finished writing report\")\n",
     "    return result.final_output\n",
     "\n",
+    "\n",
     "async def send_email(report: ReportData):\n",
-    "    \"\"\" Use the email agent to send an email with the report \"\"\"\n",
+    "    \"\"\"Use the email agent to send an email with the report\"\"\"\n",
     "    print(\"Writing email...\")\n",
     "    result = await Runner.run(email_agent, report.markdown_report)\n",
     "    print(\"Email sent\")\n",
@@ -318,26 +385,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Showtime!"
+    "### Showtime!\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting research...\n",
+      "Planning searches...\n",
+      "Will perform 3 searches\n",
+      "Searching...\n",
+      "Finished searching\n",
+      "Thinking about report...\n",
+      "Finished writing report\n",
+      "Writing email...\n",
+      "Email sent\n",
+      "Hooray!\n"
+     ]
+    }
+   ],
    "source": [
-    "query =\"Latest AI Agent frameworks in 2025\"\n",
+    "query = \"Latest AI Agent frameworks in 2025\"\n",
     "\n",
     "with trace(\"Research trace\"):\n",
     "    print(\"Starting research...\")\n",
     "    search_plan = await plan_searches(query)\n",
     "    search_results = await perform_searches(search_plan)\n",
     "    report = await write_report(query, search_results)\n",
-    "    await send_email(report)  \n",
-    "    print(\"Hooray!\")\n",
-    "\n",
-    "\n"
+    "    await send_email(report)\n",
+    "    print(\"Hooray!\")\n"
    ]
   },
   {
@@ -346,7 +428,7 @@
    "source": [
     "### As always, take a look at the trace\n",
     "\n",
-    "https://platform.openai.com/traces"
+    "https://platform.openai.com/traces\n"
    ]
   },
   {
@@ -363,7 +445,7 @@
     "            <span style=\"color:#00cc00;\">You've reached an important moment with the course; you've created a valuable Agent using one of the latest Agent frameworks. You've upskilled, and unlocked new commercial possibilities. Take a moment to celebrate your success!<br/><br/>Something I should ask you -- my editor would smack me if I didn't mention this. If you're able to rate the course on Udemy, I'd be seriously grateful: it's the most important way that Udemy decides whether to show the course to others and it makes a massive difference.<br/><br/>And another reminder to <a href=\"https://www.linkedin.com/in/eddonner/\">connect with me on LinkedIn</a> if you wish! If you wanted to post about your progress on the course, please tag me and I'll weigh in to increase your exposure.\n",
     "            </span>\n",
     "        </td>\n",
-    "    </tr>"
+    "    </tr>\n"
    ]
   }
  ],
@@ -383,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
