Working through autogen classes

--- a/5_autogen/1_lab1_autogen_agentchat.ipynb
+++ b/5_autogen/1_lab1_autogen_agentchat.ipynb
@@ -8,16 +8,28 @@
     "\n",
     "AutoGen AgentChat!\n",
     "\n",
-    "This should look simple and familiar, because it has a lot in common with Crew and OpenAI Agents SDK"
+    "This should look simple and familiar, because it has a lot in common with Crew and OpenAI Agents SDK\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
+    "\n",
     "load_dotenv(override=True)"
    ]
   },
@@ -25,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### First concept: the Model"
+    "### First concept: the Model\n"
    ]
   },
   {
@@ -35,16 +47,18 @@
    "outputs": [],
    "source": [
     "from autogen_ext.models.openai import OpenAIChatCompletionClient\n",
+    "\n",
     "model_client = OpenAIChatCompletionClient(model=\"gpt-4o-mini\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from autogen_ext.models.ollama import OllamaChatCompletionClient\n",
+    "\n",
     "ollamamodel_client = OllamaChatCompletionClient(model=\"llama3.2\")"
    ]
   },
@@ -52,16 +66,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Second concept: The Message"
+    "### Second concept: The Message\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TextMessage(id='23224a3a-73b8-41e6-bfc9-f85c8f13cf1a', source='user', models_usage=None, metadata={}, created_at=datetime.datetime(2026, 1, 9, 15, 52, 33, 908023, tzinfo=datetime.timezone.utc), content=\"I'd like to go to London\", type='TextMessage')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from autogen_agentchat.messages import TextMessage\n",
+    "\n",
     "message = TextMessage(content=\"I'd like to go to London\", source=\"user\")\n",
     "message"
    ]
@@ -70,12 +96,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Third concept: The Agent"
+    "### Third concept: The Agent\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +111,7 @@
     "    name=\"airline_agent\",\n",
     "    model_client=model_client,\n",
     "    system_message=\"You are a helpful assistant for an airline. You give short, humorous answers.\",\n",
-    "    model_client_stream=True\n",
+    "    model_client_stream=True,\n",
     ")"
    ]
   },
@@ -93,14 +119,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Put it all together with on_messages"
+    "### Put it all together with on_messages\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Sure thing! Just make sure your suitcase is packed with more tea than clothes!'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from autogen_core import CancellationToken\n",
     "\n",
@@ -112,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's make a local database of ticket prices"
+    "### Let's make a local database of ticket prices\n"
    ]
   },
   {
@@ -146,9 +183,13 @@
     "def save_city_price(city_name, round_trip_price):\n",
     "    conn = sqlite3.connect(\"tickets.db\")\n",
     "    c = conn.cursor()\n",
-    "    c.execute(\"REPLACE INTO cities (city_name, round_trip_price) VALUES (?, ?)\", (city_name.lower(), round_trip_price))\n",
+    "    c.execute(\n",
+    "        \"REPLACE INTO cities (city_name, round_trip_price) VALUES (?, ?)\",\n",
+    "        (city_name.lower(), round_trip_price),\n",
+    "    )\n",
     "    conn.commit()\n",
     "    conn.close()\n",
+    "\n",
     "\n",
     "# Some cities!\n",
     "save_city_price(\"London\", 299)\n",
@@ -167,10 +208,12 @@
    "source": [
     "# Method to get price for a city\n",
     "def get_city_price(city_name: str) -> float | None:\n",
-    "    \"\"\" Get the roundtrip ticket price to travel to the city \"\"\"\n",
+    "    \"\"\"Get the roundtrip ticket price to travel to the city\"\"\"\n",
     "    conn = sqlite3.connect(\"tickets.db\")\n",
     "    c = conn.cursor()\n",
-    "    c.execute(\"SELECT round_trip_price FROM cities WHERE city_name = ?\", (city_name.lower(),))\n",
+    "    c.execute(\n",
+    "        \"SELECT round_trip_price FROM cities WHERE city_name = ?\", (city_name.lower(),)\n",
+    "    )\n",
     "    result = c.fetchone()\n",
     "    conn.close()\n",
     "    return result[0] if result else None"
@@ -178,16 +221,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "499.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "get_city_price(\"Rome\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,17 +253,38 @@
     "    system_message=\"You are a helpful assistant for an airline. You give short, humorous answers, including the price of a roundtrip ticket.\",\n",
     "    model_client_stream=True,\n",
     "    tools=[get_city_price],\n",
-    "    reflect_on_tool_use=True\n",
+    "    reflect_on_tool_use=True,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[FunctionCall(id='call_EjZQbjFIpndkrp4HYZCb1thR', arguments='{\"city_name\":\"London\"}', name='get_city_price')]\n",
+      "[FunctionExecutionResult(content='299.0', name='get_city_price', call_id='call_EjZQbjFIpndkrp4HYZCb1thR', is_error=False)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"Sure! A roundtrip ticket to London is just $299. It's cheaper than a ticket to your own couch! 🌍✈️\""
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "response = await smart_agent.on_messages([message], cancellation_token=CancellationToken())\n",
+    "response = await smart_agent.on_messages(\n",
+    "    [message], cancellation_token=CancellationToken()\n",
+    ")\n",
     "for inner_message in response.inner_messages:\n",
     "    print(inner_message.content)\n",
     "response.chat_message.content"
@@ -225,7 +300,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "agents (3.12.3)",
    "language": "python",
    "name": "python3"
   },
@@ -239,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
