--- a/5_autogen/3_lab3_autogen_core.ipynb
+++ b/5_autogen/3_lab3_autogen_core.ipynb
@@ -32,9 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from dataclasses import dataclass\n",
     "from autogen_core import AgentId, MessageContext, RoutedAgent, message_handler\n",
@@ -53,7 +64,7 @@
    "source": [
     "### First we define our Message object\n",
     "\n",
-    "Whatever structure we want for messages in our Agent framework."
+    "Whatever structure we want for messages in our Agent framework.\n"
    ]
   },
   {
@@ -63,6 +74,7 @@
    "outputs": [],
    "source": [
     "# Let's have a simple one!\n",
+    "\n",
     "\n",
     "@dataclass\n",
     "class Message:\n",
@@ -96,33 +108,46 @@
     "\n",
     "    @message_handler\n",
     "    async def on_my_message(self, message: Message, ctx: MessageContext) -> Message:\n",
-    "        return Message(content=f\"This is {self.id.type}-{self.id.key}. You said '{message.content}' and I disagree.\")\n",
-    "        "
+    "        return Message(\n",
+    "            content=f\"This is {self.id.type}-{self.id.key}. You said '{message.content}' and I disagree.\"\n",
+    "        )"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### OK let's create a Standalone runtime and register our agent type"
+    "### OK let's create a Standalone runtime and register our agent type\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AgentType(type='simple_agent')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
     "runtime = SingleThreadedAgentRuntime()\n",
-    "await SimpleAgent.register(runtime, \"simple_agent\", lambda: SimpleAgent())"
+    "await SimpleAgent.register(\n",
+    "    runtime, \"simple_agent\", lambda: SimpleAgent()\n",
+    ")  # Factory, tells runtime it can instantiate SimpleAgent using the default constructor"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Alright! Let's start a runtime and send a message"
+    "### Alright! Let's start a runtime and send a message\n"
    ]
   },
   {
@@ -136,9 +161,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> This is simple_agent-default. You said 'Well hi there!' and I disagree.\n"
+     ]
+    }
+   ],
    "source": [
     "agent_id = AgentId(\"simple_agent\", \"default\")\n",
     "response = await runtime.send_message(Message(\"Well hi there!\"), agent_id)\n",
@@ -161,7 +194,9 @@
    "source": [
     "### OK Now let's do something more interesting\n",
     "\n",
-    "We'll use an AgentChat Assistant!"
+    "We'll use an AgentChat Assistant!\n",
+    "\n",
+    "- You can use Autogen Agent Chat as you see below, but nothing is stopping you from using like the openai client directly.\n"
    ]
   },
   {
@@ -170,7 +205,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "class MyLLMAgent(RoutedAgent):\n",
     "    def __init__(self) -> None:\n",
     "        super().__init__(\"LLMAgent\")\n",
@@ -178,21 +212,35 @@
     "        self._delegate = AssistantAgent(\"LLMAgent\", model_client=model_client)\n",
     "\n",
     "    @message_handler\n",
-    "    async def handle_my_message_type(self, message: Message, ctx: MessageContext) -> Message:\n",
+    "    async def handle_my_message_type(\n",
+    "        self, message: Message, ctx: MessageContext\n",
+    "    ) -> Message:\n",
     "        print(f\"{self.id.type} received message: {message.content}\")\n",
     "        text_message = TextMessage(content=message.content, source=\"user\")\n",
-    "        response = await self._delegate.on_messages([text_message], ctx.cancellation_token)\n",
+    "        response = await self._delegate.on_messages(\n",
+    "            [text_message], ctx.cancellation_token\n",
+    "        )\n",
     "        reply = response.chat_message.content\n",
     "        print(f\"{self.id.type} responded: {reply}\")\n",
-    "        return Message(content=reply)\n",
-    "    \n"
+    "        return Message(content=reply)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AgentType(type='LLMAgent')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from autogen_core import SingleThreadedAgentRuntime\n",
     "\n",
@@ -203,21 +251,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LLMAgent received message: Hi there!\n",
+      "LLMAgent responded: Hello! How can I assist you today?\n",
+      ">>> Hello! How can I assist you today?\n",
+      ">>> This is simple_agent-default. You said 'Hello! How can I assist you today?' and I disagree.\n",
+      "LLMAgent received message: This is simple_agent-default. You said 'Hello! How can I assist you today?' and I disagree.\n",
+      "LLMAgent responded: I appreciate your feedback! How would you like to be greeted, or how can I better assist you?\n"
+     ]
+    }
+   ],
    "source": [
     "runtime.start()  # Start processing messages in the background.\n",
-    "response = await runtime.send_message(Message(\"Hi there!\"), AgentId(\"LLMAgent\", \"default\"))\n",
+    "response = await runtime.send_message(\n",
+    "    Message(\"Hi there!\"), AgentId(\"LLMAgent\", \"default\")\n",
+    ")\n",
     "print(\">>>\", response.content)\n",
-    "response =  await runtime.send_message(Message(response.content), AgentId(\"simple_agent\", \"default\"))\n",
+    "response = await runtime.send_message(\n",
+    "    Message(response.content), AgentId(\"simple_agent\", \"default\")\n",
+    ")\n",
     "print(\">>>\", response.content)\n",
-    "response = await runtime.send_message(Message(response.content), AgentId(\"LLMAgent\", \"default\"))"
+    "response = await runtime.send_message(\n",
+    "    Message(response.content), AgentId(\"LLMAgent\", \"default\")\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,12 +296,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### OK now let's show this at work - let's have 3 agents interact!"
+    "### OK now let's show this at work - let's have 3 agents interact!\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,11 +315,16 @@
     "        self._delegate = AssistantAgent(name, model_client=model_client)\n",
     "\n",
     "    @message_handler\n",
-    "    async def handle_my_message_type(self, message: Message, ctx: MessageContext) -> Message:\n",
+    "    async def handle_my_message_type(\n",
+    "        self, message: Message, ctx: MessageContext\n",
+    "    ) -> Message:\n",
     "        text_message = TextMessage(content=message.content, source=\"user\")\n",
-    "        response = await self._delegate.on_messages([text_message], ctx.cancellation_token)\n",
+    "        response = await self._delegate.on_messages(\n",
+    "            [text_message], ctx.cancellation_token\n",
+    "        )\n",
     "        return Message(content=response.chat_message.content)\n",
-    "    \n",
+    "\n",
+    "\n",
     "class Player2Agent(RoutedAgent):\n",
     "    def __init__(self, name: str) -> None:\n",
     "        super().__init__(name)\n",
@@ -260,19 +332,24 @@
     "        self._delegate = AssistantAgent(name, model_client=model_client)\n",
     "\n",
     "    @message_handler\n",
-    "    async def handle_my_message_type(self, message: Message, ctx: MessageContext) -> Message:\n",
+    "    async def handle_my_message_type(\n",
+    "        self, message: Message, ctx: MessageContext\n",
+    "    ) -> Message:\n",
     "        text_message = TextMessage(content=message.content, source=\"user\")\n",
-    "        response = await self._delegate.on_messages([text_message], ctx.cancellation_token)\n",
+    "        response = await self._delegate.on_messages(\n",
+    "            [text_message], ctx.cancellation_token\n",
+    "        )\n",
     "        return Message(content=response.chat_message.content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "JUDGE = \"You are judging a game of rock, paper, scissors. The players have made these choices:\\n\"\n",
+    "\n",
     "\n",
     "class RockPaperScissorsAgent(RoutedAgent):\n",
     "    def __init__(self, name: str) -> None:\n",
@@ -281,12 +358,16 @@
     "        self._delegate = AssistantAgent(name, model_client=model_client)\n",
     "\n",
     "    @message_handler\n",
-    "    async def handle_my_message_type(self, message: Message, ctx: MessageContext) -> Message:\n",
+    "    async def handle_my_message_type(\n",
+    "        self, message: Message, ctx: MessageContext\n",
+    "    ) -> Message:\n",
     "        instruction = \"You are playing rock, paper, scissors. Respond only with the one word, one of the following: rock, paper, or scissors.\"\n",
     "        message = Message(content=instruction)\n",
     "        inner_1 = AgentId(\"player1\", \"default\")\n",
     "        inner_2 = AgentId(\"player2\", \"default\")\n",
-    "        response1 = await self.send_message(message, inner_1)\n",
+    "        response1 = await self.send_message(\n",
+    "            message, inner_1\n",
+    "        )  # Can internally call other agents\n",
     "        response2 = await self.send_message(message, inner_2)\n",
     "        result = f\"Player 1: {response1.content}\\nPlayer 2: {response2.content}\\n\"\n",
     "        judgement = f\"{JUDGE}{result}Who wins?\"\n",
@@ -297,22 +378,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "runtime = SingleThreadedAgentRuntime()\n",
     "await Player1Agent.register(runtime, \"player1\", lambda: Player1Agent(\"player1\"))\n",
     "await Player2Agent.register(runtime, \"player2\", lambda: Player2Agent(\"player2\"))\n",
-    "await RockPaperScissorsAgent.register(runtime, \"rock_paper_scissors\", lambda: RockPaperScissorsAgent(\"rock_paper_scissors\"))\n",
+    "await RockPaperScissorsAgent.register(\n",
+    "    runtime,\n",
+    "    \"rock_paper_scissors\",\n",
+    "    lambda: RockPaperScissorsAgent(\"rock_paper_scissors\"),\n",
+    ")\n",
     "runtime.start()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Player 1: scissors\n",
+      "Player 2: paper\n",
+      "Player 1 wins. Scissors beat paper. TERMINATE\n"
+     ]
+    }
+   ],
    "source": [
     "agent_id = AgentId(\"rock_paper_scissors\", \"default\")\n",
     "message = Message(content=\"go\")\n",
@@ -322,18 +417,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "await runtime.stop()\n",
     "await runtime.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "agents (3.12.3)",
    "language": "python",
    "name": "python3"
   },
@@ -347,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
