--- a/5_autogen/4_lab4_autogen_distributed.ipynb
+++ b/5_autogen/4_lab4_autogen_distributed.ipynb
@@ -10,12 +10,12 @@
     "\n",
     "I'm only going to give a Teaser of this!!\n",
     "\n",
-    "Partly because I'm unsure how relevant it is to you. If you'd like me to add more content for this, please do let me know.."
+    "Partly because I'm unsure how relevant it is to you. If you'd like me to add more content for this, please do let me know..\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,30 +26,29 @@
     "from autogen_ext.models.openai import OpenAIChatCompletionClient\n",
     "from autogen_ext.tools.langchain import LangChainToolAdapter\n",
     "from langchain_community.utilities import GoogleSerperAPIWrapper\n",
-    "from langchain.agents import Tool\n",
+    "from langchain_core.tools import tool\n",
     "from IPython.display import display, Markdown\n",
     "\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv(override=True)\n",
     "\n",
-    "ALL_IN_ONE_WORKER = False"
+    "ALL_IN_ONE_WORKER = True"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Start with our Message class"
+    "### Start with our Message class\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "@dataclass\n",
     "class Message:\n",
     "    content: str"
@@ -59,42 +58,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### And now - a host for our distributed runtime"
+    "### And now - a host for our distributed runtime\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "from autogen_ext.runtimes.grpc import GrpcWorkerAgentRuntimeHost\n",
     "\n",
     "host = GrpcWorkerAgentRuntimeHost(address=\"localhost:50051\")\n",
-    "host.start() "
+    "host.start()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's reintroduce a tool"
+    "### Let's reintroduce a tool\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "serper = GoogleSerperAPIWrapper()\n",
-    "langchain_serper =Tool(name=\"internet_search\", func=serper.run, description=\"Useful for when you need to search the internet\")\n",
+    "\n",
+    "\n",
+    "@tool\n",
+    "def langchain_serper(query: str) -> str:\n",
+    "    \"\"\"Useful for when you need to search the internet.\"\"\"\n",
+    "    return serper.run(query)\n",
+    "\n",
+    "\n",
     "autogen_serper = LangChainToolAdapter(langchain_serper)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,12 +119,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### And make some Agents"
+    "### And make some Agents\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,34 +132,56 @@
     "    def __init__(self, name: str) -> None:\n",
     "        super().__init__(name)\n",
     "        model_client = OpenAIChatCompletionClient(model=\"gpt-4o-mini\")\n",
-    "        self._delegate = AssistantAgent(name, model_client=model_client, tools=[autogen_serper], reflect_on_tool_use=True)\n",
+    "        self._delegate = AssistantAgent(\n",
+    "            name,\n",
+    "            model_client=model_client,\n",
+    "            tools=[autogen_serper],\n",
+    "            reflect_on_tool_use=True,\n",
+    "        )\n",
     "\n",
     "    @message_handler\n",
-    "    async def handle_my_message_type(self, message: Message, ctx: MessageContext) -> Message:\n",
+    "    async def handle_my_message_type(\n",
+    "        self, message: Message, ctx: MessageContext\n",
+    "    ) -> Message:\n",
     "        text_message = TextMessage(content=message.content, source=\"user\")\n",
-    "        response = await self._delegate.on_messages([text_message], ctx.cancellation_token)\n",
+    "        response = await self._delegate.on_messages(\n",
+    "            [text_message], ctx.cancellation_token\n",
+    "        )\n",
     "        return Message(content=response.chat_message.content)\n",
-    "    \n",
+    "\n",
+    "\n",
     "class Player2Agent(RoutedAgent):\n",
     "    def __init__(self, name: str) -> None:\n",
     "        super().__init__(name)\n",
     "        model_client = OpenAIChatCompletionClient(model=\"gpt-4o-mini\")\n",
-    "        self._delegate = AssistantAgent(name, model_client=model_client, tools=[autogen_serper], reflect_on_tool_use=True)\n",
+    "        self._delegate = AssistantAgent(\n",
+    "            name,\n",
+    "            model_client=model_client,\n",
+    "            tools=[autogen_serper],\n",
+    "            reflect_on_tool_use=True,\n",
+    "        )\n",
     "\n",
     "    @message_handler\n",
-    "    async def handle_my_message_type(self, message: Message, ctx: MessageContext) -> Message:\n",
+    "    async def handle_my_message_type(\n",
+    "        self, message: Message, ctx: MessageContext\n",
+    "    ) -> Message:\n",
     "        text_message = TextMessage(content=message.content, source=\"user\")\n",
-    "        response = await self._delegate.on_messages([text_message], ctx.cancellation_token)\n",
+    "        response = await self._delegate.on_messages(\n",
+    "            [text_message], ctx.cancellation_token\n",
+    "        )\n",
     "        return Message(content=response.chat_message.content)\n",
-    "    \n",
+    "\n",
+    "\n",
     "class Judge(RoutedAgent):\n",
     "    def __init__(self, name: str) -> None:\n",
     "        super().__init__(name)\n",
     "        model_client = OpenAIChatCompletionClient(model=\"gpt-4o-mini\")\n",
     "        self._delegate = AssistantAgent(name, model_client=model_client)\n",
-    "        \n",
+    "\n",
     "    @message_handler\n",
-    "    async def handle_my_message_type(self, message: Message, ctx: MessageContext) -> Message:\n",
+    "    async def handle_my_message_type(\n",
+    "        self, message: Message, ctx: MessageContext\n",
+    "    ) -> Message:\n",
     "        message1 = Message(content=instruction1)\n",
     "        message2 = Message(content=instruction2)\n",
     "        inner_1 = AgentId(\"player1\", \"default\")\n",
@@ -164,19 +192,20 @@
     "        judgement = f\"{judge}\\n{result}Respond with your decision and brief explanation\"\n",
     "        message = TextMessage(content=judgement, source=\"user\")\n",
     "        response = await self._delegate.on_messages([message], ctx.cancellation_token)\n",
-    "        return Message(content=result + \"\\n\\n## Decision:\\n\\n\" + response.chat_message.content)\n"
+    "        return Message(\n",
+    "            content=result + \"\\n\\n## Decision:\\n\\n\" + response.chat_message.content\n",
+    "        )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from autogen_ext.runtimes.grpc import GrpcWorkerAgentRuntime\n",
     "\n",
     "if ALL_IN_ONE_WORKER:\n",
-    "\n",
     "    worker = GrpcWorkerAgentRuntime(host_address=\"localhost:50051\")\n",
     "    await worker.start()\n",
     "\n",
@@ -187,7 +216,7 @@
     "    agent_id = AgentId(\"judge\", \"default\")\n",
     "\n",
     "else:\n",
-    "\n",
+    "    # Creates 3 different runtimes, one for each agent. Each runtime can be run on a different machine.\n",
     "    worker1 = GrpcWorkerAgentRuntime(host_address=\"localhost:50051\")\n",
     "    await worker1.start()\n",
     "    await Player1Agent.register(worker1, \"player1\", lambda: Player1Agent(\"player1\"))\n",
@@ -199,14 +228,12 @@
     "    worker = GrpcWorkerAgentRuntime(host_address=\"localhost:50051\")\n",
     "    await worker.start()\n",
     "    await Judge.register(worker, \"judge\", lambda: Judge(\"judge\"))\n",
-    "    agent_id = AgentId(\"judge\", \"default\")\n",
-    "\n",
-    "\n"
+    "    agent_id = AgentId(\"judge\", \"default\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,16 +242,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "## Pros of AutoGen:\n",
+       "Here are some pros of using AutoGen in your new AI Agent project:\n",
+       "\n",
+       "1. **Scalability**: AutoGen’s modular and extensible framework allows for the creation of scalable systems, making it easier to accommodate future growth and complexity.\n",
+       "\n",
+       "2. **Ease of Use**: The platform offers integrated observability and debugging tools, which simplify the monitoring and control of agent workflows, enhancing overall development efficiency.\n",
+       "\n",
+       "These features can significantly improve the versatility and manageability of your AI project. \n",
+       "\n",
+       "TERMINATE\n",
+       "\n",
+       "## Cons of AutoGen:\n",
+       "Here are some cons of using AutoGen for an AI Agent project:\n",
+       "\n",
+       "1. **Documentation Issues**: The documentation is often criticized for being hard to read and lacking sufficient examples, which can make it challenging for developers to effectively implement and utilize the framework.\n",
+       "\n",
+       "2. **Functional Limitations**: Certain features, such as structured outputs, may not work as intended, leading to potential frustrations during development and limiting the capabilities of the agents.\n",
+       "\n",
+       "3. **Lack of Differentiation**: AutoGen may struggle to differentiate itself from similar applications like AG2, which could affect its appeal and support within the developer community.\n",
+       "\n",
+       "4. **Complexity of Implementation**: Due to the difficulties in documentation and potential issues with functionality, implementing AutoGen can become a complex undertaking, affecting productivity and increasing development time.\n",
+       "\n",
+       "These factors may make it less suitable for your project depending on your specific needs and the level of support you're looking for. \n",
+       "\n",
+       "TERMINATE\n",
+       "\n",
+       "\n",
+       "\n",
+       "## Decision:\n",
+       "\n",
+       "Based on the pros and cons presented by the research team, I would recommend **not to use AutoGen for the project**. \n",
+       "\n",
+       "**Rationale**: While AutoGen offers scalability and ease of use with integrated tools, the significant drawbacks related to documentation quality, functional limitations, and implementation complexity pose serious risks for the project's development timeline and overall efficiency. The potential frustrations and challenges could outweigh the benefits, especially if the project requires a reliable and straightforward framework for implementation.\n",
+       "\n",
+       "TERMINATE"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(Markdown(response.content))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +327,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "agents (3.12.3)",
    "language": "python",
    "name": "python3"
   },
@@ -267,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
